ChangeLog for InfoViewer plugin
===========================================================================

VERSION 1.2

* fixed deprecation warnings (Stefan Kost)
* updated icons (Stefan Kost)


VERSION 1.1

* updated to jEdit 4.0 dockable API
* bugfix: #509058 (Verify Error On InfoViewer)
* removed old JDK 1.1 workarounds
* requires at least jEdit 4.0pre6


VERSION 1.0

* no longer dependent on EditBus plugin (plugins that used the message
  org.gjt.sp.jedit.msg.ViewURL from the EditBus plugin should now use
  public static void InfoViewerPlugin.openURL(View,String) directly).
* the internal (Java/Swing driven) browser is now dockable into jEdit's view.
  Use this to create a HTML preview pane, when editing HTML files.
* new options for automatic update of the current page of the internal browser:
  update on buffer switch, on buffer save, periodically.
  Use this to watch a stock ticker, or to sync your edit buffer with the
  preview pane automatically.
* some other minor enhancements
* bugfix: "Edit current URL" didn't work if URL had an anchor
* requires at least JDK 1.1, jEdit 3.1final


VERSION 0.5.4

* use jEdit icons
* use new jEdit action API
* use jEdit open file dialog
* cleaned up option panes (only one pane again)
* bugfix: pressing enter on "Go to:" field didn't work
* bugfix: now can use quotes in external browser command, ie. you can enter:
  "C:\Program Files\Internet Explorer\IEXPLORE.EXE"
  instead of:
  C:\\Program\ Files\\Internet\ Explorer\\IEXPLORE.EXE
* requires at least JDK 1.1, jEdit 3.0final, EditBus 0.9.4


VERSION 0.5.3

* fixed compatibility with jEdit 2.5.1
* requires jEdit 2.5.1 or higher and EditBus 0.9.4 or higher


VERSION 0.5.2

* fixed compatibility with jEdit2.5pre3
* requires jEdit 2.3pre3 or higher and EditBus 0.9.4 or higher


VERSION 0.5.1

* bugfix: NullPointerException on invocation on SUN JDK 1.3.* for Windows
* bugfix: Reload didn't work on JDK 1.3.*


VERSION 0.5.0
