@@ -1,3 +1,4 @@
 Dirk Moebius <dmoebius@gmx.net>
+Stefan Kost <s.kost@webmacher.de>
 
 InfoViewer is based on HTMLViewer by Slava Pestov <sp@gjt.org>
