@@ -8,13 +8,14 @@ plugin.infoviewer.InfoViewerPlugin.depend.1=jdk 1.3
 
 
 # Plugin menu properties
-infoviewer-menu=infoviewer-open - infoviewer-open-buffer infoviewer-open-sel - infoviewer
-infoviewer-menu.label=InfoViewer
-infoviewer-open.label=Open browser...
-infoviewer-open-buffer.label=Open current buffer with browser
-infoviewer-open-sel.label=Open selected URL with browser
 infoviewer.label=Internal InfoViewer
-
+infoviewer.menu=infoviewer.open - infoviewer.open-buffer infoviewer.open-sel - infoviewer - infoviewer.increase-viewer-fontsize infoviewer.decrease-viewer-fontsize
+infoviewer.menu.label=InfoViewer
+infoviewer.open.label=Open browser...
+infoviewer.open-buffer.label=Open current buffer with browser
+infoviewer.open-sel.label=Open selected URL with browser
+infoviewer.increase-viewer-fontsize.label=Increase font-size of viewer
+infoviewer.decrease-viewer-fontsize.label=Decrease font-size of viewer
 
 # Default option pane properties
 infoviewer.browsertype=internal
